hphp/hack/test/typecheck/array_unification/darray_to_vec_or_dict.php.exp
File "darray_to_vec_or_dict.php", line 11, characters 37-47:
Too few type arguments for this type (Naming[2071])
